# TAIXIN

./: ETL_JOBS_SCRIPT.py  Preprocess.py  README.md  output.csv  pyproject.toml
gradio_app/: app.py
gradio_app/.ebextensions/: python.config
