[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Doctorxsx <allen31042@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
